Actualización de README

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "datos abiertos"
   ],
   "homepage": "https://github.com/migueloruiz/ecobicimx",
-  "author": "@migueloruiz <https://github.com/migueloruiz>",
+  "author": "@migueloruiz (https://github.com/migueloruiz)",
   "repository": {
     "type": "git",
     "url": "https://github.com/migueloruiz/ecobicimx"
